hide dropdown on outside click; css spacing issue on mobile

--- a/views/css/main.css
+++ b/views/css/main.css
@@ -395,7 +395,7 @@ ul.submenu li a:hover{
 		width: 150px;
 	}
 	ul#menu {
-		margin-left: -4px;
+		margin-left: -8px;
 	}
 }
 
